--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "rsuite": "^5.79.1",
+    "store_rating": "file:..",
     "yup": "^1.6.1"
   },
   "devDependencies": {
