--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-router": "^7.5.0",
+    "react-router-dom": "^7.5.0",
+    "react-toastify": "^11.0.5",
     "rsuite": "^5.79.1",
     "store_rating": "file:..",
     "yup": "^1.6.1"
@@ -25,6 +28,9 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-toastify": "^4.1.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
